--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "@ngrx/store": "^7.4.0",
     "@ngrx/store-devtools": "^7.4.0",
     "bootstrap": "^4.3.1",
+    "chart.js": "^2.8.0",
     "core-js": "^2.5.4",
     "firebase": "^6.1.0",
+    "ng2-charts": "^2.0.3",
     "rxjs": "~6.3.3",
     "sweetalert2": "^8.11.7",
     "tslib": "^1.9.0",
